Modal Updated & Overflow Fixed

--- a/src/NewTask.css
+++ b/src/NewTask.css
@@ -1,9 +1,3 @@
-form {
-    align-items: center;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -23,6 +17,8 @@ textarea {
     height: 300px;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
+    background-color: grey;
+    color: white;
 }
 
 textarea:focus, input:focus{
@@ -30,8 +26,10 @@ textarea:focus, input:focus{
 }
 
 .modal {
-    background-color: rgb(238, 238, 238);
-    border-radius: 10px;
+    background-color: rgb(53, 53, 53);
+    border-radius: 5px;
+    padding: 10px;
+
 }
 
 .content {
@@ -39,18 +37,20 @@ textarea:focus, input:focus{
     flex-direction: column;
 }
 
-.modal {
-    padding: 10px;
-}
 
 #title {
     border: none;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(70, 70, 70);
+    color: white;
+    margin-bottom: 8px;
+    border-radius: 5px;
 }
 
 #desc {
     border: none;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(70, 70, 70);
+    border-radius: 5px;
+    margin-bottom: 8px;
 }
 
 
@@ -60,7 +60,7 @@ textarea:focus, input:focus{
     border-radius: 10px;
     border: none;
     transition: 0.3s;
-    background-color: rgb(77, 154, 255);
+    background-color: rgb(0, 85, 197);
     margin-top: 5px;
 }
 
@@ -72,7 +72,7 @@ textarea:focus, input:focus{
 
 #newTask {
     border: none;
-    border-radius: 6px;
+    border-radius: 5px;
     background-color: rgb(0, 85, 197);
     color: white;
     display: flex;
